--- a/cobia_range.Rmd
+++ b/cobia_range.Rmd
@@ -25,7 +25,6 @@ library(rJava)
 library(maptools)
 library(sdmpredictors)
 library(maps)
-library(mapdata)
 ```
 
 # Projection and Extent
@@ -55,8 +54,14 @@ list_datasets()
 # Explore layers in a dataset 
 list_layers() 
 
-# Download specific layers to current directory. In this case we are downloading mean sea surface temperature, max sea surface temperature, min sea surface temperature, dissolved oxygen, and sea surface salinity
-files <- load_layers(c("BO_sstmax", "BO_sstmin", "BO_dissox", "MS_biogeo08_sss_mean_5m")) 
+# Download specific layers to current directory. In this case we are downloading mean sea surface temperature, max sea surface temperature, min sea surface temperature, dissolved oxygen, mean chlorophyl A and sea surface salinity
+files <- load_layers(c("BO_sstmean", "BO_sstmax", "BO_sstmin", "BO_dissox", "MS_biogeo08_sss_mean_5m", "BO_chlomean")) 
+
+# Check layer statistics 
+layer_stats() 
+
+# Check Pearson correlation coefficient between layers 
+layers_correlation() 
 
 # Make a rasterLayer with predictor variables
 predictors <- stack(files)
@@ -93,7 +98,7 @@ if (file.exists(jar)) {
  
  # Plot predictions
  plot(cobia_pred, main = "Predicted Suitability")
- map('worldHires', fill=FALSE, add=TRUE)
+ map('world', fill = T, add = T, col = 'gray')
 points(cobia_sample$lon, cobia_sample$lat, pch="+", cex=0.2)
 
 } else {
@@ -103,4 +108,15 @@ points(cobia_sample$lon, cobia_sample$lat, pch="+", cex=0.2)
 
 # Fix!!! map boundaries are not matching prediction layer
 ```
+Mask and crop 
+```{r}
+# Create mask of sst range using ezz boundaries
+me_masked <- mask(x = cobia_pred, mask = eez)
+plot(me_masked)
 
+# Crop sst range to Brazil's EEZ extent
+me_cropped <- crop(x = me_masked, y = extent(eez))
+plot(me_cropped)
+# Add basemap (Note: borders don't match)
+map('world', fill = T, add = T, col = 'gray')
+```
