--- a/data_cp.Rmd
+++ b/data_cp.Rmd
@@ -53,7 +53,7 @@ path <- paste0(team_path, "My Drive/conservation-plan/data/shapefiles")
 
 # EEZ
 eez <- read_sf(dsn = path,
-                layer = "eez")
+                layer = "eez_BRA")
 
 # Depth
 depth <- raster(paste0(path,"/gebco_2019_n7.045066_s-35.78779_w-54.58321_e-26.01452.tif"))
@@ -193,12 +193,12 @@ max_sst <- load_layers("BO_sstmax")
 Visualize SST data
 ```{r}
 # Histograms
-hist(min)
-hist(max)
+hist(min_sst)
+hist(max_sst)
 
 # Plots
-plot(min)
-plot(max)
+plot(min_sst)
+plot(max_sst)
 ```
 Cropping SST to eez
 ```{r}
