--- a/suitability.Rmd
+++ b/suitability.Rmd
@@ -15,47 +15,73 @@ Suitability
 - Min sea surface temp: >22°C
 - Max sea surface temp: <32°C
 - Distance to shore: <25 nm
+- *Current velocity made no difference
 
-*Note: run data Rmd first!
+- Reefs
+- Artificial reefs
+- Wetlands
+- MPAs
+- *No take zones made no difference
+
+Defining variables
+```{r}
+min_depth <- -25
+max_depth <- -100
+min_sst_value <- 22
+max_sst_value <- 32
+max_dist_shore <- 46300 #25 nautical miles converted to meters
+
+```
+
+
 
 Reclassifying depth to have 1s only if it's in between 25-100m, and 0s otherwise
 
 ```{r}
+# Read in file
+depth_mask <- raster(paste0(path,"/depth_mask.tif"))
+
 # Reclassification matrix for depth layer
-rcl_mat_depth <- c(-Inf, -100, 0,
-                   -100, -25, 1,
-                   -25, Inf, 0)
+rcl_mat_depth <- c(-Inf, max_depth, 0,
+                   max_depth, min_depth, 1,
+                   min_depth, Inf, 0)
 
 # Reclassify the depth layer
-depth_binary <- reclassify(depth_BRA_res,rcl= rcl_mat_depth)
+depth_binary <- reclassify(depth_mask,rcl= rcl_mat_depth)
 
 # Plot reclassified layer
 plot(depth_binary)
 
 ```
 
-Reclassify min SST layer to have 1s only if it is above 19°C, and 0s otherwise
+Reclassify min SST layer to have 1s only if it is above 22°C, and 0s otherwise
 ```{r}
+# Read in file
+min_sst_mask <- raster(paste0(path,"/min_sst_mask.tif"))
+
 # Reclassification matrix for min SST
-rcl_matrix_min <- c( -Inf, 22, 0,
-                22, Inf, 1)
+rcl_matrix_min <- c( -Inf, min_sst_value, 0,
+                min_sst_value, Inf, 1)
 
 # Reclassify min SST
-sst_binary_min <- reclassify(min_sst_BRA, rcl = rcl_matrix_min)
+sst_binary_min <- reclassify(min_sst_mask, rcl = rcl_matrix_min)
 
 # Plot reclassified layer
 plot(sst_binary_min)
 ```
 
 
-Reclassify max SST layer to have 1s only if it is less than 30°C, and 0s otherwise
+Reclassify max SST layer to have 1s only if it is less than 32°C, and 0s otherwise
 ```{r}
-# Reclassify matrix for max SST layer
-rcl_matrix_max <- c( -Inf, 32, 1,
-                32, Inf, 0)
+# Read in file
+max_sst_mask <- raster(paste0(path,"/max_sst_mask.tif"))
 
-# Reclassify max SST layer
-sst_binary_max <- reclassify(max_sst_BRA, rcl = rcl_matrix_max)
+# Reclassification matrix for min SST
+rcl_matrix_max <- c( -Inf, max_sst_value, 1,
+                max_sst_value, Inf, 0)
+
+# Reclassify min SST
+sst_binary_max <- reclassify(max_sst_mask, rcl = rcl_matrix_max)
 
 # Plot reclassified layer
 plot(sst_binary_max)
@@ -63,13 +89,16 @@ plot(sst_binary_max)
 
 Reclassify distance to shore layer to have 1s only if it is less than 25nm, and 0s otherwise
 ```{r}
+# Read in file
+dist_shore <- raster(paste0(path,"/dist_shore.tif"))
+
 # Reclassify matrix for distance to shore layer
 rcl_matrix_dist_shore <- c( -Inf, 0, 0,
-                            0, 46300, 1,
-                            46300, Inf, 0)
+                            0, max_dist_shore, 1,
+                            max_dist_shore, Inf, 0)
 
 # Reclassify distance to shore layer
-dist_shore_binary <- reclassify(d, rcl = rcl_matrix_dist_shore)
+dist_shore_binary <- reclassify(dist_shore, rcl = rcl_matrix_dist_shore)
 
 # Plot reclassified layer
 plot(dist_shore_binary)
@@ -78,81 +107,51 @@ plot(dist_shore_binary)
 
 MPAS
 ```{r}
-# Rasterize mpas
-extent<-extent(eez_BRA)
-res = res(min_sst_BRA)
+# Read in file
+mpas_binary <- raster(paste0(path,"/mpas_binary.tif"))
 
-plot(mpas_BR$geometry)
-
-r <- raster( extent, resolution = res)
-
-r_mpas <- rasterize(mpas_BR, r, field = 0, background = 1) # name: include binary
-
-plot(r_mpas)
-freq(r_mpas)
+# Plot
+plot(mpas_binary)
 
 ```
 
 Artificial reefs
 ```{r}
-# Get rid of z-dimension
-reefs_artificial <- st_zm(reefs_artificial, drop = TRUE, what = "ZM")
+# Read in file
+reefs_artificial_binary <- raster(paste0(path,"/reefs_artificial_binary.tif"))
 
-# reproject
-crs <- crs(mpas_BR)
-st_transform(reefs_artificial, crs)
-
-# transform polygon into lines
-reefs_artificial_m <- st_cast(reefs_artificial, "MULTILINESTRING")
-plot(reefs_artificial_m)
-
-# Rasterize artificial reefs
-r_reefs_artificial <- rasterize(reefs_artificial, r, field= 0 , background = 1)
-
-plot(r_reefs_artificial)
-plot(reefs_artificial$geometry)
-freq(r_reefs_artificial)
+# Plot
+plot(reefs_artificial_binary)
 
 ```
 
-No take zones
+Reefs
 ```{r}
-# Rasterize no take zones
-r_no_take <- rasterize(no_take, r, 0)
+# Read in file
+reefs_artificial_binary <- raster(paste0(path,"/reefs_artificial_binary.tif"))
 
-plot(r_no_take)
-freq(r_no_take)
-
-r_no_take[is.na(r_no_take)] <- 1
+# Plot
+plot(reefs_binary)
 
 ```
 
 Wetlands
 ```{r}
-# Get rid of z-dimension
-wetlands <- st_zm(wetlands, drop = TRUE, what = "ZM")
+# Read in file
+reefs_artificial_binary <- raster(paste0(path,"/reefs_artificial_binary.tif"))
 
-# Rasterize no take zones
-r_wetlands <- rasterize(wetlands, r, 0)
+# Plot
+plot(wetlands_binary)
 
-plot(r_wetlands)
-freq(r_wetlands)
-
-r_wetlands[is.na(r_wetlands)] <- 1
 ```
 
-Reefs (Marine Ecosystems)
+No-take zones
 ```{r}
-# Get rid of z-dimension
-reefs <- st_zm(reefs, drop = TRUE, what = "ZM")
+# Read in file
+no_take_binary <- raster(paste0(path,"/no_take_binary.tif"))
 
-# Rasterize reefs
-r_reefs <- rasterize(reefs, r, 0)
+plot(no_take_binary)
 
-plot(r_reefs)
-freq(r_reefs)
-
-r_reefs[is.na(r_reefs)] <- 1
 ```
 
 
@@ -161,54 +160,63 @@ Suitable areas (Multiplicative)
 # Overlay all layers
 # Note: they all need to have the same extent and resolution
 # Change extent distance to shore 
-dist_shore_binary <- setExtent( dist_shore_binary, ext = sst_binary_min)
-r_mpas <- setExtent( r_mpas, ext = sst_binary_min)
 
 # Overlay
-suitable <- overlay(sst_binary_min, sst_binary_max, depth_binary, dist_shore_binary, r_mpas, fun = function(v,w,x,y,z){v*w*x*y*z})
+suitable <- overlay(sst_binary_min, sst_binary_max, depth_binary, mpas_binary, wetlands_binary, reefs_binary, reefs_artificial_binary, no_take_binary, dist_shore_binary, fun = function(a,b,c,d,e,f,g,h,i){a*b*c*d*e*f*g*h*i})
 
 # Plot suitable areas
 plot(suitable)
 map('world', fill = T, add = T, col = 'gray')
+# 224 suitable cells!
 ```
 
 Suitable areas (Additive)
 ```{r}
 # Overlay all layers
 # Note: they all need to have the same extent and resolution
-suitable_2 <- overlay(sst_binary_min, sst_binary_max, depth_binary, dist_shore_binary, r_mpas, fun = function(v,w,x,y,z){v+w+x+y+z})
+suitable_2 <- overlay(sst_binary_min, sst_binary_max, depth_binary, mpas_binary, wetlands_binary, reefs_binary, reefs_artificial_binary, no_take_binary, dist_shore_binary, fun = function(a,b,c,d,e,f,g,h,i){a+b+c+d+e+f+g+h+i})
 
 # Plot suitable areas
 plot(suitable_2)
 map('world', fill = T, add = T, col = 'gray')
-freq(suitable_2)
 
 ```
 
 
 Save raster
 ```{r}
-freq(suitable) #474 cells
-
-writeRaster(x = suitable, filename = paste0(path,"/suitable.tif"), overwrite = F)
+writeRaster(x = suitable, filename = paste0(path,"/suitable.tif"), overwrite = T)
 
 # reproject to epsg: 5880 and save
 suitable_reprojected <- projectRaster( suitable, crs = "+proj=aea +lat_1=-2 +lat_2=-22 +lat_0=-12 +lon_0=-54 +x_0=0 +y_0=0 +ellps=GRS80 +towgs84=0,0,0,0,0,0,0 +units=m +no_defs")
 
-writeRaster(x = suitable_reprojected, filename = paste0(path,"/suitable_epsg5880.tif"), overwrite = F)
+writeRaster(x = suitable_reprojected, filename = paste0(path,"/suitable_epsg5880.tif"), overwrite = T)
 
 ```
 
 
 Total suitable area calculation
 ```{r}
-# Note: need to fix units and projection
 a <- area(suitable)
 plot(a)
 b <- (suitable * a)
 plot(b)
-freq(b)
-sum(values(b), na.rm = T)
 
+sum(values(b), na.rm = T)
+```
+
+```{r}
+# Sanity check --> check area of EEZ
+eez_r <- rasterize(eez_BRA, r, field = 1, background = 0)
+
+a_eez <- area(eez_r)
+plot(a_eez)
+b_eez <- (eez_r * a_eez)
+plot(b_eez)
+
+freq(b_eez)
+
+sum(values(b_eez), na.rm = T)
+```
 
 
